[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepcom"
version = "0.1.0"
authors = [
  { name="Muhang Lan", email="mhlan@mail.ustc.edu.cn" },
]
description = "Research tools for communication-efficient deep learning"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mh-lan/deepcom"
"Bug Tracker" = "https://github.com/mh-lan/deepcom/issues"